// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </RCTSafeAreaView>
      <ImageZoomView
        captureEvent={true}
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
      />
      <View>
        <RNSVGSvgView
          bbHeight={140}
          bbWidth={750}
          focusable={false}
          height={140}
          width={750}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0.35714285714285715,
                    -436207616,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradSVG"
                x1={1}
                x2={0.9999999999999999}
                y1={1}
                y2={-2.220446049250313e-16}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradSVG",
                ]
              }
              height={140}
              propList={
                Array [
                  "fill",
                ]
              }
              width={750}
              x={1}
              y={1}
            />
            <View
              forceInset={
                Object {
                  "bottom": "always",
                  "horizontal": "always",
                  "top": "never",
                }
              }
              pointerEvents="box-none"
            >
              <View>
                <Text>
                  Caption
                </Text>
              </View>
            </View>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </RCTSafeAreaView>
      <ImageZoomView
        captureEvent={true}
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
      />
      <View>
        <RNSVGSvgView
          bbHeight={140}
          bbWidth={750}
          focusable={false}
          height={140}
          width={750}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0.35714285714285715,
                    -436207616,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradSVG"
                x1={1}
                x2={0.9999999999999999}
                y1={1}
                y2={-2.220446049250313e-16}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradSVG",
                ]
              }
              height={140}
              propList={
                Array [
                  "fill",
                ]
              }
              width={750}
              x={1}
              y={1}
            />
            <View
              forceInset={
                Object {
                  "bottom": "always",
                  "horizontal": "always",
                  "top": "never",
                }
              }
              pointerEvents="box-none"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
      >
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </RCTSafeAreaView>
      <ImageZoomView
        captureEvent={true}
        enablePreload={true}
        enableSwipeDown={true}
        imageUrls={
          Array [
            Object {
              "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&offline=true",
            },
          ]
        }
      />
      <View>
        <RNSVGSvgView
          bbHeight={140}
          bbWidth={750}
          focusable={false}
          height={140}
          width={750}
        >
          <RNSVGGroup>
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  Array [
                    0.35714285714285715,
                    -436207616,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="gradSVG"
                x1={1}
                x2={0.9999999999999999}
                y1={1}
                y2={-2.220446049250313e-16}
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                Array [
                  1,
                  "gradSVG",
                ]
              }
              height={140}
              propList={
                Array [
                  "fill",
                ]
              }
              width={750}
              x={1}
              y={1}
            />
            <View
              forceInset={
                Object {
                  "bottom": "always",
                  "horizontal": "always",
                  "top": "never",
                }
              }
              pointerEvents="box-none"
            >
              <View>
                <Text>
                  Caption
                </Text>
              </View>
            </View>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
